--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -535,6 +535,21 @@ jobs:
           rm -rf artifacts/aarch64/python || true
           mkdir -p artifacts/aarch64/python
           maturin build --release --target aarch64-unknown-linux-gnu --manifest-path asherah-py/Cargo.toml --skip-auditwheel --out artifacts/aarch64/python
+      - name: Build Java binding (arm64) in Bullseye container
+        env:
+          CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
+          CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
+          AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+          PKG_CONFIG_ALLOW_CROSS: 1
+          TARGET_ARCH: aarch64
+          BINDING_COMPONENTS: java
+          SKIP_CORE_BUILD: "1"
+        run: |
+          # Only build the native library, Maven packaging happens in package-arm64
+          cargo build --release -p asherah-java --target aarch64-unknown-linux-gnu
+          mkdir -p artifacts/aarch64/java
+          find target/aarch64-unknown-linux-gnu/release -name 'libasherah_java.*' -exec cp {} artifacts/aarch64/java/ \;
       - name: Upload arm64 core target artifacts
         uses: actions/upload-artifact@v4
         with:
