--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -551,9 +551,54 @@ jobs:
           name: bindings-linux-aarch64-part-python
           path: artifacts/aarch64
 
-  package-arm64:
+  build-java-arm64:
     runs-on: ubuntu-latest
     needs: core-arm64
+    container: rust:1.86-bullseye  # Native ARM64 build
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+          key: build-${{ runner.os }}-arm64-java-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            build-${{ runner.os }}-arm64-java-
+            build-${{ runner.os }}-arm64-
+      - name: Download arm64 core artifacts (rlib)
+        uses: actions/download-artifact@v4
+        with:
+          name: arm64-core-artifacts
+          path: target/
+      - name: Install cross-compile toolchain
+        run: |
+          apt-get update
+          apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+      - name: Build Java JNI (links pre-built rlib)
+        env:
+          CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
+          CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
+          AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+        run: |
+          rustup target add aarch64-unknown-linux-gnu
+          cargo build --release -p asherah-java --target aarch64-unknown-linux-gnu
+          mkdir -p artifacts/aarch64/java
+          find target/aarch64-unknown-linux-gnu/release -name 'libasherah_java.*' -type f -exec cp {} artifacts/aarch64/java/ \;
+      - name: Upload Java native library artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-aarch64-part-java-native
+          path: artifacts/aarch64
+
+  package-arm64:
+    runs-on: ubuntu-latest
+    needs: [core-arm64, build-java-arm64]
     strategy:
       fail-fast: false
       matrix:
@@ -586,6 +631,12 @@ jobs:
         with:
           name: arm64-core-artifacts
           path: target/
+      - name: Download Java native library (if Java component)
+        if: matrix.component == 'java'
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-aarch64-part-java-native
+          path: artifacts/aarch64
       - name: Install cross toolchains
         run: |
           sudo apt-get update
