--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -466,16 +466,13 @@ jobs:
           name: bindings-linux-aarch64
           path: artifacts/aarch64/**
 
-  core-arm64:
+  build-rlib-arm64:
     runs-on: ubuntu-latest
     needs: lint
-    container: rust:1.86-bullseye  # glibc 2.31, Rust pre-installed
+    container: rust:1.86-bullseye
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
-      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
-      BUN_INSTALL: ${{ github.workspace }}/.cache/bun
-      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -484,21 +481,14 @@ jobs:
           path: |
             .cache/cargo
             .cache/rustup
-            .cache/pip
-            .cache/npm
-            .cache/maven
-            .cache/dotnet
-            .cache/bun
-          key: build-${{ runner.os }}-arm64-core-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          key: build-${{ runner.os }}-arm64-rlib-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            build-${{ runner.os }}-arm64-core-
-      - name: Install cross-compile toolchain and Node.js for arm64
+            build-${{ runner.os }}-arm64-rlib-
+      - name: Install cross-compile toolchain
         run: |
           apt-get update
           apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-          curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-          apt-get install -y nodejs
-      - name: Build FFI core (arm64) via cross-compilation
+      - name: Build FFI rlib (arm64)
         env:
           CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
           CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
@@ -510,7 +500,44 @@ jobs:
         run: |
           rustup target add aarch64-unknown-linux-gnu
           ./scripts/build-bindings.sh
-      - name: Build Node.js binding (arm64) in Bullseye container
+      - name: Upload arm64 rlib artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: arm64-rlib-artifacts
+          path: target/
+
+  build-node-arm64:
+    runs-on: ubuntu-latest
+    needs: build-rlib-arm64
+    container: rust:1.86-bullseye
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+            .cache/npm
+          key: build-${{ runner.os }}-arm64-node-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json') }}
+          restore-keys: |
+            build-${{ runner.os }}-arm64-node-
+      - name: Download arm64 rlib artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: arm64-rlib-artifacts
+          path: target/
+      - name: Install cross-compile toolchain and Node.js
+        run: |
+          apt-get update
+          apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
+          apt-get install -y nodejs
+      - name: Build Node.js binding (arm64)
         env:
           CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
           CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
@@ -521,30 +548,53 @@ jobs:
           BINDING_COMPONENTS: node
           SKIP_CORE_BUILD: "1"
         run: ./scripts/build-bindings.sh
-      - name: Install Python and maturin for Python binding
+      - name: Upload arm64 node binding artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-aarch64-part-node
+          path: artifacts/aarch64
+
+  build-python-arm64:
+    runs-on: ubuntu-latest
+    needs: build-rlib-arm64
+    container: rust:1.86-bullseye
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+            .cache/pip
+          key: build-${{ runner.os }}-arm64-python-${{ hashFiles('**/Cargo.lock', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml') }}
+          restore-keys: |
+            build-${{ runner.os }}-arm64-python-
+      - name: Download arm64 rlib artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: arm64-rlib-artifacts
+          path: target/
+      - name: Install cross-compile toolchain and Python
         run: |
-          apt-get install -y python3 python3-pip python3-venv
+          apt-get update
+          apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu python3 python3-pip python3-venv
           pip3 install maturin==1.9.4
-      - name: Build Python binding (arm64) in Bullseye container
+      - name: Build Python binding (arm64)
         env:
           CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
           CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
           AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
         run: |
+          rustup target add aarch64-unknown-linux-gnu
           rm -rf artifacts/aarch64/python || true
           mkdir -p artifacts/aarch64/python
           maturin build --release --target aarch64-unknown-linux-gnu --manifest-path asherah-py/Cargo.toml --skip-auditwheel --out artifacts/aarch64/python
-      - name: Upload arm64 core target artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: arm64-core-artifacts
-          path: target/
-      - name: Upload arm64 node binding artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings-linux-aarch64-part-node
-          path: artifacts/aarch64
       - name: Upload arm64 python binding artifact
         uses: actions/upload-artifact@v4
         with:
@@ -553,7 +603,7 @@ jobs:
 
   build-java-arm64:
     runs-on: ubuntu-latest
-    needs: core-arm64
+    needs: build-rlib-arm64
     container: rust:1.86-bullseye  # Native ARM64 build
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
@@ -570,10 +620,10 @@ jobs:
           restore-keys: |
             build-${{ runner.os }}-arm64-java-
             build-${{ runner.os }}-arm64-
-      - name: Download arm64 core artifacts (rlib)
+      - name: Download arm64 rlib artifacts
         uses: actions/download-artifact@v4
         with:
-          name: arm64-core-artifacts
+          name: arm64-rlib-artifacts
           path: target/
       - name: Install cross-compile toolchain
         run: |
@@ -598,7 +648,7 @@ jobs:
 
   package-arm64:
     runs-on: ubuntu-latest
-    needs: [core-arm64, build-java-arm64]
+    needs: [build-rlib-arm64, build-java-arm64]
     strategy:
       fail-fast: false
       matrix:
@@ -626,10 +676,10 @@ jobs:
           restore-keys: |
             build-${{ runner.os }}-arm64-${{ matrix.component }}-
             build-${{ runner.os }}-arm64-
-      - name: Download arm64 core artifacts
+      - name: Download arm64 rlib artifacts
         uses: actions/download-artifact@v4
         with:
-          name: arm64-core-artifacts
+          name: arm64-rlib-artifacts
           path: target/
       - name: Download Java native library (if Java component)
         if: matrix.component == 'java'
