--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,15 +61,12 @@ jobs:
       - name: Run full language test matrix
         run: ./scripts/test-in-docker.sh
 
-  core-x86_64:
+  build-rlib-x86_64:
     runs-on: ubuntu-latest
     needs: lint
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
-      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
-      BUN_INSTALL: ${{ github.workspace }}/.cache/bun
-      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -78,30 +75,137 @@ jobs:
           path: |
             .cache/cargo
             .cache/rustup
-            .cache/pip
-            .cache/npm
-            .cache/maven
-            .cache/dotnet
-            .cache/bun
-          key: build-${{ runner.os }}-x86_64-core-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          key: build-${{ runner.os }}-x86_64-rlib-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            build-${{ runner.os }}-x86_64-core-
-      - name: Build FFI core (x86_64)
+            build-${{ runner.os }}-x86_64-rlib-
+      - name: Build FFI rlib (x86_64)
         env:
           TARGET_ARCH: x86_64
           BINDING_COMPONENTS: ffi
         run: ./scripts/build-bindings.sh
-      - name: Cache x86_64 core artifacts
+      - name: Cache x86_64 rlib artifacts
         uses: actions/cache/save@v4
         with:
           path: |
             target/x86_64-unknown-linux-gnu
             target/release
-          key: core-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+
+  build-node-x86_64:
+    runs-on: ubuntu-latest
+    needs: build-rlib-x86_64
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+            .cache/npm
+          key: build-${{ runner.os }}-x86_64-node-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json') }}
+          restore-keys: |
+            build-${{ runner.os }}-x86_64-node-
+      - name: Restore x86_64 rlib artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            target/x86_64-unknown-linux-gnu
+            target/release
+          key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          fail-on-cache-miss: true
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Build Node.js binding (x86_64)
+        env:
+          TARGET_ARCH: x86_64
+          BINDING_COMPONENTS: node
+          SKIP_CORE_BUILD: "1"
+        run: ./scripts/build-bindings.sh
+      - name: Upload x86_64 node binding artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-x86_64-part-node
+          path: artifacts/x86_64
+
+  build-python-x86_64:
+    runs-on: ubuntu-latest
+    needs: build-rlib-x86_64
+    container: quay.io/pypa/manylinux_2_28_x86_64
+    env:
+      CARGO_HOME: /github/workspace/.cache/cargo
+      RUSTUP_HOME: /github/workspace/.cache/rustup
+      PIP_CACHE_DIR: /github/workspace/.cache/pip
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore x86_64 rlib artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            target/x86_64-unknown-linux-gnu
+            target/release
+          key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          fail-on-cache-miss: true
+      - name: Build Python binding (x86_64) - manylinux
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
+          source "$HOME/.cargo/env"
+          python3.11 -m pip install maturin==1.9.4
+          rm -rf artifacts/x86_64/python || true
+          mkdir -p artifacts/x86_64/python
+          maturin build --release --manifest-path asherah-py/Cargo.toml --compatibility manylinux_2_28 -i python3.11 --out artifacts/x86_64/python
+      - name: Upload x86_64 python binding artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-x86_64-part-python
+          path: artifacts/x86_64
+
+  build-java-x86_64:
+    runs-on: ubuntu-latest
+    needs: build-rlib-x86_64
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+          key: build-${{ runner.os }}-x86_64-java-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            build-${{ runner.os }}-x86_64-java-
+      - name: Restore x86_64 rlib artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            target/x86_64-unknown-linux-gnu
+            target/release
+          key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          fail-on-cache-miss: true
+      - name: Build Java JNI (x86_64)
+        env:
+          TARGET_ARCH: x86_64
+        run: |
+          cargo build --release -p asherah-java
+          mkdir -p artifacts/x86_64/java
+          find target/release -name 'libasherah_java.*' -type f -exec cp {} artifacts/x86_64/java/ \;
+      - name: Upload x86_64 java native library artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-x86_64-part-java-native
+          path: artifacts/x86_64
 
   package-x86_64:
     runs-on: ubuntu-latest
-    needs: core-x86_64
+    needs: [build-rlib-x86_64, build-node-x86_64, build-python-x86_64, build-java-x86_64]
     strategy:
       fail-fast: false
       matrix:
@@ -130,15 +234,33 @@ jobs:
           restore-keys: |
             build-${{ runner.os }}-x86_64-${{ matrix.component }}-
             build-${{ runner.os }}-x86_64-
-      - name: Restore x86_64 core artifacts
+      - name: Restore x86_64 rlib artifacts
         if: matrix.component != 'python'
         uses: actions/cache/restore@v4
         with:
           path: |
             target/x86_64-unknown-linux-gnu
             target/release
-          key: core-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
           fail-on-cache-miss: true
+      - name: Download Java native library (if Java component)
+        if: matrix.component == 'java'
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-x86_64-part-java-native
+          path: artifacts/x86_64
+      - name: Download Node binding (if Node component)
+        if: matrix.component == 'node'
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-x86_64-part-node
+          path: artifacts/x86_64
+      - name: Download Python binding (if Python component)
+        if: matrix.component == 'python'
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-x86_64-part-python
+          path: artifacts/x86_64
       - uses: actions/setup-node@v4
         if: matrix.component == 'node'
         with:
@@ -147,20 +269,6 @@ jobs:
         if: matrix.component == 'dotnet'
         with:
           dotnet-version: '8.0.x'
-      - name: Restore x86_64 core artifacts for Python
-        if: matrix.component == 'python'
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            target/x86_64-unknown-linux-gnu
-            target/release
-          key: core-target-${{ runner.os }}-x86_64-${{ github.run_id }}
-          fail-on-cache-miss: true
-      - name: Prepare Python build directory
-        if: matrix.component == 'python'
-        run: |
-          rm -rf artifacts/x86_64/python || true
-          mkdir -p artifacts/x86_64/python
       - name: Package ${{ matrix.component }} (x86_64) - manylinux
         if: matrix.component == 'python'
         run: |
@@ -312,7 +420,7 @@ jobs:
 
   sanitizers:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: build-rlib-x86_64
     steps:
       - uses: actions/checkout@v4
       - name: Cache cargo registry
