--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,7 +179,8 @@ jobs:
           path: |
             .cache/cargo
             .cache/rustup
-          key: build-${{ runner.os }}-x86_64-java-${{ hashFiles('**/Cargo.lock') }}
+            .cache/maven
+          key: build-${{ runner.os }}-x86_64-java-${{ hashFiles('**/Cargo.lock', 'asherah-java/java/pom.xml') }}
           restore-keys: |
             build-${{ runner.os }}-x86_64-java-
       - name: Restore x86_64 rlib artifacts
@@ -190,52 +191,37 @@ jobs:
             target/release
           key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
           fail-on-cache-miss: true
-      - name: Build Java JNI (x86_64)
+      - name: Build Java binding (x86_64)
         env:
           TARGET_ARCH: x86_64
-        run: |
-          cargo build --release -p asherah-java
-          mkdir -p artifacts/x86_64/java
-          find target/release -name 'libasherah_java.*' -type f -exec cp {} artifacts/x86_64/java/ \;
-      - name: Upload x86_64 java native library artifact
+          BINDING_COMPONENTS: java
+          SKIP_CORE_BUILD: "1"
+        run: ./scripts/build-bindings.sh
+      - name: Upload x86_64 java artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-linux-x86_64-part-java-native
+          name: bindings-linux-x86_64-part-java
           path: artifacts/x86_64
 
-  package-x86_64:
+  build-dotnet-x86_64:
     runs-on: ubuntu-latest
-    needs: [build-rlib-x86_64, build-node-x86_64, build-python-x86_64, build-java-x86_64]
-    strategy:
-      fail-fast: false
-      matrix:
-        component: [ffi, node, python, dotnet, java]
+    needs: build-rlib-x86_64
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
-      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
-      BUN_INSTALL: ${{ github.workspace }}/.cache/bun
-      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
-        if: matrix.component != 'python'
         uses: actions/cache@v4
         with:
           path: |
             .cache/cargo
             .cache/rustup
-            .cache/pip
-            .cache/npm
-            .cache/maven
             .cache/dotnet
-            .cache/bun
-          key: build-${{ runner.os }}-x86_64-${{ matrix.component }}-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          key: build-${{ runner.os }}-x86_64-dotnet-${{ hashFiles('**/Cargo.lock', 'asherah-dotnet/**/*.csproj') }}
           restore-keys: |
-            build-${{ runner.os }}-x86_64-${{ matrix.component }}-
-            build-${{ runner.os }}-x86_64-
+            build-${{ runner.os }}-x86_64-dotnet-
       - name: Restore x86_64 rlib artifacts
-        if: matrix.component != 'python'
         uses: actions/cache/restore@v4
         with:
           path: |
@@ -243,57 +229,63 @@ jobs:
             target/release
           key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
           fail-on-cache-miss: true
-      - name: Download Java native library (if Java component)
-        if: matrix.component == 'java'
-        uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-java-native
-          path: artifacts/x86_64
-      - name: Download Node binding (if Node component)
-        if: matrix.component == 'node'
-        uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-node
-          path: artifacts/x86_64
-      - name: Download Python binding (if Python component)
-        if: matrix.component == 'python'
-        uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-python
-          path: artifacts/x86_64
-      - uses: actions/setup-node@v4
-        if: matrix.component == 'node'
-        with:
-          node-version: 20
       - uses: actions/setup-dotnet@v4
-        if: matrix.component == 'dotnet'
         with:
           dotnet-version: '8.0.x'
-      - name: Package ${{ matrix.component }} (x86_64) - manylinux
-        if: matrix.component == 'python'
-        run: |
-          docker run --rm \
-            -v "$PWD":/io \
-            -w /io \
-            quay.io/pypa/manylinux_2_28_x86_64:latest \
-            bash -c "
-              curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal
-              source \$HOME/.cargo/env
-              /opt/python/cp38-cp38/bin/pip install maturin
-              /opt/python/cp38-cp38/bin/maturin build --release --manifest-path asherah-py/Cargo.toml --compatibility manylinux_2_28 --out artifacts/x86_64/python
-            "
-
-      - name: Package ${{ matrix.component }} (x86_64)
-        if: matrix.component != 'python'
+      - name: Build .NET binding (x86_64)
         env:
           TARGET_ARCH: x86_64
-          BINDING_COMPONENTS: ${{ matrix.component }}
+          BINDING_COMPONENTS: dotnet
           SKIP_CORE_BUILD: "1"
         run: ./scripts/build-bindings.sh
-      - name: Upload partial artifact (${{ matrix.component }})
+      - name: Upload x86_64 dotnet artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-linux-x86_64-part-${{ matrix.component }}
+          name: bindings-linux-x86_64-part-dotnet
+          path: artifacts/x86_64
+
+  build-ffi-x86_64:
+    runs-on: ubuntu-latest
+    needs: build-rlib-x86_64
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore x86_64 rlib artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            target/x86_64-unknown-linux-gnu
+            target/release
+          key: rlib-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          fail-on-cache-miss: true
+      - name: Package FFI artifacts (x86_64)
+        run: |
+          mkdir -p artifacts/x86_64/ffi artifacts/x86_64/ruby
+          find target/release -name 'libasherah_ffi.*' -type f -exec cp {} artifacts/x86_64/ffi/ \;
+          find target/release -name 'libasherah_ffi.*' -type f -exec cp {} artifacts/x86_64/ruby/ \;
+      - name: Upload x86_64 ffi artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-x86_64-part-ffi
+          path: artifacts/x86_64
+
+  package-x86_64:
+    runs-on: ubuntu-latest
+    needs: [build-ffi-x86_64, build-node-x86_64, build-python-x86_64, build-dotnet-x86_64, build-java-x86_64]
+    steps:
+      - name: Download all x86_64 artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: bindings-linux-x86_64-part-*
+          path: artifacts-staging
+          merge-multiple: true
+      - name: Consolidate artifacts
+        run: |
+          mkdir -p artifacts/x86_64
+          cp -r artifacts-staging/* artifacts/x86_64/
+      - name: Upload consolidated x86_64 artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-x86_64
           path: artifacts/x86_64
 
   arm64-test-image:
@@ -714,7 +706,7 @@ jobs:
   build-java-arm64:
     runs-on: ubuntu-latest
     needs: build-rlib-arm64
-    container: rust:1.86-bullseye  # Native ARM64 build
+    container: rust:1.86-bullseye
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
@@ -726,10 +718,10 @@ jobs:
           path: |
             .cache/cargo
             .cache/rustup
-          key: build-${{ runner.os }}-arm64-java-${{ hashFiles('**/Cargo.lock') }}
+            .cache/maven
+          key: build-${{ runner.os }}-arm64-java-${{ hashFiles('**/Cargo.lock', 'asherah-java/java/pom.xml') }}
           restore-keys: |
             build-${{ runner.os }}-arm64-java-
-            build-${{ runner.os }}-arm64-
       - name: Download arm64 rlib artifacts
         uses: actions/download-artifact@v4
         with:
@@ -739,36 +731,31 @@ jobs:
         run: |
           apt-get update
           apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-      - name: Build Java JNI (links pre-built rlib)
+      - name: Build Java binding (arm64)
         env:
           CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
           CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
           AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+          TARGET_ARCH: aarch64
+          BINDING_COMPONENTS: java
+          SKIP_CORE_BUILD: "1"
         run: |
           rustup target add aarch64-unknown-linux-gnu
-          cargo build --release -p asherah-java --target aarch64-unknown-linux-gnu
-          mkdir -p artifacts/aarch64/java
-          find target/aarch64-unknown-linux-gnu/release -name 'libasherah_java.*' -type f -exec cp {} artifacts/aarch64/java/ \;
-      - name: Upload Java native library artifact
+          ./scripts/build-bindings.sh
+      - name: Upload Java binding artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-linux-aarch64-part-java-native
+          name: bindings-linux-aarch64-part-java
           path: artifacts/aarch64
 
-  package-arm64:
+  build-dotnet-arm64:
     runs-on: ubuntu-latest
-    needs: [build-rlib-arm64, build-java-arm64]
-    strategy:
-      fail-fast: false
-      matrix:
-        component: [ffi, dotnet, java]
+    needs: build-rlib-arm64
+    container: rust:1.86-bullseye
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
-      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
-      BUN_INSTALL: ${{ github.workspace }}/.cache/bun
-      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -777,50 +764,78 @@ jobs:
           path: |
             .cache/cargo
             .cache/rustup
-            .cache/pip
-            .cache/npm
-            .cache/maven
             .cache/dotnet
-            .cache/bun
-          key: build-${{ runner.os }}-arm64-${{ matrix.component }}-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          key: build-${{ runner.os }}-arm64-dotnet-${{ hashFiles('**/Cargo.lock', 'asherah-dotnet/**/*.csproj') }}
           restore-keys: |
-            build-${{ runner.os }}-arm64-${{ matrix.component }}-
-            build-${{ runner.os }}-arm64-
+            build-${{ runner.os }}-arm64-dotnet-
       - name: Download arm64 rlib artifacts
         uses: actions/download-artifact@v4
         with:
           name: arm64-rlib-artifacts
           path: target/
-      - name: Download Java native library (if Java component)
-        if: matrix.component == 'java'
-        uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-aarch64-part-java-native
-          path: artifacts/aarch64
-      - name: Install cross toolchains
+      - name: Install cross-compile toolchain and .NET
         run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc6-dev-arm64-cross pkg-config
-      - name: Prepare Rust target
-        run: rustup target add aarch64-unknown-linux-gnu
-      - uses: actions/setup-dotnet@v4
-        if: matrix.component == 'dotnet'
-        with:
-          dotnet-version: '8.0.x'
-      - name: Package ${{ matrix.component }} (arm64)
+          apt-get update
+          apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu wget
+          wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh
+          chmod +x dotnet-install.sh
+          ./dotnet-install.sh --channel 8.0 --install-dir /usr/share/dotnet
+          ln -sf /usr/share/dotnet/dotnet /usr/bin/dotnet
+      - name: Build .NET binding (arm64)
         env:
-          TARGET_ARCH: aarch64
-          BINDING_COMPONENTS: ${{ matrix.component }}
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_AR: aarch64-linux-gnu-ar
           CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
           CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
           AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
-          PKG_CONFIG_ALLOW_CROSS: 1
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+          TARGET_ARCH: aarch64
+          BINDING_COMPONENTS: dotnet
           SKIP_CORE_BUILD: "1"
-        run: ./scripts/build-bindings.sh
-      - name: Upload partial artifact (${{ matrix.component }} arm64)
+        run: |
+          rustup target add aarch64-unknown-linux-gnu
+          ./scripts/build-bindings.sh
+      - name: Upload .NET binding artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-linux-aarch64-part-${{ matrix.component }}
+          name: bindings-linux-aarch64-part-dotnet
+          path: artifacts/aarch64
+
+  build-ffi-arm64:
+    runs-on: ubuntu-latest
+    needs: build-rlib-arm64
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download arm64 rlib artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: arm64-rlib-artifacts
+          path: target/
+      - name: Package FFI artifacts (arm64)
+        run: |
+          mkdir -p artifacts/aarch64/ffi artifacts/aarch64/ruby
+          find target -name 'libasherah_ffi.*' -type f -exec cp {} artifacts/aarch64/ffi/ \;
+          find target -name 'libasherah_ffi.*' -type f -exec cp {} artifacts/aarch64/ruby/ \;
+      - name: Upload FFI artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-aarch64-part-ffi
+          path: artifacts/aarch64
+
+  package-arm64:
+    runs-on: ubuntu-latest
+    needs: [build-ffi-arm64, build-node-arm64, build-python-arm64, build-dotnet-arm64, build-java-arm64]
+    steps:
+      - name: Download all arm64 artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: bindings-linux-aarch64-part-*
+          path: artifacts-staging
+          merge-multiple: true
+      - name: Consolidate artifacts
+        run: |
+          mkdir -p artifacts/aarch64
+          cp -r artifacts-staging/* artifacts/aarch64/
+      - name: Upload consolidated arm64 artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-aarch64
           path: artifacts/aarch64
