fix(ci): remove redundant assemble jobs, fix Python cargo path
- Delete assemble-x86_64 and assemble-arm64 (package jobs already consolidate)
- Fix Python build cargo env path in manylinux container
- Package jobs now produce final bindings-linux-{x86_64,aarch64} artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
       - name: Build Python binding (x86_64) - manylinux
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
-          source "$HOME/.cargo/env"
+          source "/github/workspace/.cache/cargo/env"
           python3.11 -m pip install maturin==1.9.4
           rm -rf artifacts/x86_64/python || true
           mkdir -p artifacts/x86_64/python
@@ -430,124 +430,6 @@ jobs:
       - name: Run valgrind on FFI tests
         run: |
           valgrind --error-exitcode=1 cargo test -p asherah-ffi --lib
-
-  assemble-x86_64:
-    runs-on: ubuntu-latest
-    needs: package-x86_64
-    steps:
-      - name: Prepare artifact staging
-        run: |
-          rm -rf partial/x86_64 artifacts/x86_64
-          mkdir -p partial/x86_64 artifacts/x86_64
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-ffi
-          path: partial/x86_64/ffi
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-node
-          path: partial/x86_64/node
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-python
-          path: partial/x86_64/python
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-dotnet
-          path: partial/x86_64/dotnet
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-x86_64-part-java
-          path: partial/x86_64/java
-      - name: Merge partial artifacts
-        run: |
-          shopt -s dotglob nullglob
-          for part_root in partial/x86_64/*; do
-            [ -d "$part_root" ] || continue
-            if compgen -G "$part_root/artifacts/x86_64/*" > /dev/null; then
-              for entry in "$part_root"/artifacts/x86_64/*; do
-                echo "Copying ${entry}"
-                cp -R "$entry" artifacts/x86_64/
-              done
-            fi
-            if compgen -G "$part_root"/* > /dev/null; then
-              for entry in "$part_root"/*; do
-                base="$(basename "$entry")"
-                if [ "$base" = "artifacts" ]; then
-                  continue
-                fi
-                echo "Copying ${entry}"
-                cp -R "$entry" artifacts/x86_64/
-              done
-            fi
-          done
-          shopt -u dotglob nullglob
-          echo "Assembled x86_64 contents:"
-          find artifacts/x86_64 -maxdepth 3 -mindepth 1 -print || true
-      - name: Upload consolidated x86_64 artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings-linux-x86_64
-          path: artifacts/x86_64/**
-
-  assemble-arm64:
-    runs-on: ubuntu-latest
-    needs: package-arm64
-    steps:
-      - name: Prepare artifact staging
-        run: |
-          rm -rf partial/aarch64 artifacts/aarch64
-          mkdir -p partial/aarch64 artifacts/aarch64
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-aarch64-part-ffi
-          path: partial/aarch64/ffi
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-aarch64-part-node
-          path: partial/aarch64/node
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-aarch64-part-python
-          path: partial/aarch64/python
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-aarch64-part-dotnet
-          path: partial/aarch64/dotnet
-      - uses: actions/download-artifact@v4
-        with:
-          name: bindings-linux-aarch64-part-java
-          path: partial/aarch64/java
-      - name: Merge partial artifacts
-        run: |
-          shopt -s dotglob nullglob
-          for part_root in partial/aarch64/*; do
-            [ -d "$part_root" ] || continue
-            if compgen -G "$part_root/artifacts/aarch64/*" > /dev/null; then
-              for entry in "$part_root"/artifacts/aarch64/*; do
-                echo "Copying ${entry}"
-                cp -R "$entry" artifacts/aarch64/
-              done
-            fi
-            if compgen -G "$part_root"/* > /dev/null; then
-              for entry in "$part_root"/*; do
-                base="$(basename "$entry")"
-                if [ "$base" = "artifacts" ]; then
-                  continue
-                fi
-                echo "Copying ${entry}"
-                cp -R "$entry" artifacts/aarch64/
-              done
-            fi
-          done
-          shopt -u dotglob nullglob
-          echo "Assembled arm64 contents:"
-          find artifacts/aarch64 -maxdepth 3 -mindepth 1 -print || true
-      - name: Upload consolidated arm64 artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings-linux-aarch64
-          path: artifacts/aarch64/**
 
   build-rlib-arm64:
     runs-on: ubuntu-latest
