--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -464,11 +464,10 @@ jobs:
           AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
           PKG_CONFIG_ALLOW_CROSS: 1
-          TARGET_ARCH: aarch64
-          BINDING_COMPONENTS: ffi
         run: |
           rustup target add aarch64-unknown-linux-gnu
-          ./scripts/build-bindings.sh
+          cargo build --release -p asherah --features sqlite --target aarch64-unknown-linux-gnu
+          cargo build --release -p asherah-config --target aarch64-unknown-linux-gnu
       - name: Upload arm64 rlib artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -533,6 +532,7 @@ jobs:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
       PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
+      CARGO_TARGET_DIR: ${{ github.workspace }}/target
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
