fix(ci): add CARGO_TARGET_DIR to all ARM64 jobs for fingerprint matching
Ensure all ARM64 jobs use identical CARGO_TARGET_DIR so Cargo fingerprints match and pre-built rlibs can be reused.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -442,6 +442,7 @@ jobs:
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      CARGO_TARGET_DIR: ${{ github.workspace }}/target
       CARGO_INCREMENTAL: 1
     steps:
       - uses: actions/checkout@v4
@@ -488,6 +489,7 @@ jobs:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
       NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
+      CARGO_TARGET_DIR: ${{ github.workspace }}/target
       CARGO_INCREMENTAL: 1
     steps:
       - uses: actions/checkout@v4
@@ -589,6 +591,7 @@ jobs:
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      CARGO_TARGET_DIR: ${{ github.workspace }}/target
       CARGO_INCREMENTAL: 1
     steps:
       - uses: actions/checkout@v4
@@ -636,6 +639,7 @@ jobs:
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      CARGO_TARGET_DIR: ${{ github.workspace }}/target
       CARGO_INCREMENTAL: 1
     steps:
       - uses: actions/checkout@v4
