--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -573,11 +573,14 @@ jobs:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
           PKG_CONFIG_ALLOW_CROSS: 1
           TARGET_ARCH: aarch64
+          CARGO_LOG: cargo::core::compiler::fingerprint=info
         run: |
           rustup target add aarch64-unknown-linux-gnu
           rm -rf artifacts/aarch64/python || true
           mkdir -p artifacts/aarch64/python
-          maturin build --release --target aarch64-unknown-linux-gnu --manifest-path asherah-py/Cargo.toml --skip-auditwheel --out artifacts/aarch64/python
+          maturin build --release --target aarch64-unknown-linux-gnu --manifest-path asherah-py/Cargo.toml --skip-auditwheel --out artifacts/aarch64/python 2>&1 | tee /tmp/maturin-build.log
+          echo "=== Checking for 'Fresh' vs 'Compiling' for asherah ==="
+          grep -E "(Fresh|Compiling) (asherah|tokio|aws)" /tmp/maturin-build.log || true
       - name: Upload arm64 python binding artifact
         uses: actions/upload-artifact@v4
         with:
